# test-0405

./: .gitignore  README.md  pyproject.toml
src/app/: __init__.py  config.py  main.py  state.py
src/app/components/: charts.py  forms.py  sidebar.py
src/app/models/: schemas.py
src/app/pages/: 1_Dashboard.py  2_Analytics.py  3_Settings.py
src/app/services/: auth_service.py  cache_service.py  data_service.py
src/app/utils/: helpers.py
tests/: conftest.py  test_services.py
